# ill-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  setup-cli.ps1  setup-cli.sh
.github/workflows/: publish.yml
cep/com.illtool.pathrefine/: .debug  index.html
cep/com.illtool.shapeaverager/: .debug  index.html
cep/com.illtool.smartmerge/: CSInterface.js  index.html
cep/shared/: geometry.jsx  json_es3.jsx  logging.jsx  math2d.jsx  pathutils.jsx  shapes.jsx  ui.jsx
docs/: blog-teaching-ai-to-see.md  spatial-ai-research-2026.md
docs/research/: constructive-drawing-methods.md  llm-spatial-reasoning-papers.md  spatial-ai-state-of-art-2026.md
npm/: README.md  package.json
npm/server/: adobe_mcp.py
plugin/: CMakeLists.txt
plugin/Resources/en.lproj/: Localizable.strings
plugin/Resources/raw/: IDToFile.txt
plugin/Source/: AICursorSnap_Wrapper.h  AIPreference_Wrapper.h  AppleVisionBridge.h  AppleVisionBridge.mm  DrawCommands.cpp  DrawCommands.h  HttpBridge.cpp  HttpBridge.h  HttpBridgeMcp.cpp  HttpBridgeRoutes.cpp  IAIFilePath.cpp  IllToolAnnotator.cpp  IllToolAnnotator.h  IllToolBlend.cpp  IllToolDecompose.cpp  IllToolGrouping.cpp  IllToolID.h  IllToolLasso.cpp  IllToolMerge.cpp  IllToolModule.h  IllToolPanels.mm  IllToolPerspective.cpp  IllToolPlugin.cpp  IllToolPlugin.h  IllToolShading.cpp  IllToolShapes.cpp  IllToolSmartSelect.cpp  IllToolSuites.cpp  IllToolSuites.h  IllToolTokens.h  IllToolWorkingMode.cpp  LearningEngine.cpp  LearningEngine.h  OnnxVisionBridge.cpp  OnnxVisionBridge.h  ProjectStore.cpp  ProjectStore.h  ShapeUtils.cpp  ShapeUtils.h  UISkinLoader.cpp  (+7 more)
plugin/Source/modules/: BlendModule.cpp  BlendModule.h  CleanupHandles.cpp  CleanupModule.cpp  CleanupModule.h  CleanupPipeline.cpp  DecomposeModule.cpp  DecomposeModule.h  GroupingModule.cpp  GroupingModule.h  LayerModule.cpp  LayerModule.h  MergeModule.cpp  MergeModule.h  PenModule.cpp  PenModule.h  PerspectiveAutoMatch.cpp  PerspectiveHandles.cpp  PerspectiveModule.cpp  PerspectiveModule.h  SelectionModule.cpp  SelectionModule.h  ShadingModule.cpp  ShadingModule.h  SurfaceModule.cpp  SurfaceModule.h  TraceImage.cpp  TraceModule.cpp  TraceModule.h  TraceSymmetry.cpp  TraceVector.cpp  TransformModule.cpp  TransformModule.h
plugin/Source/panels/: BlendPanelController.h  BlendPanelController.mm  CleanupPanelController.h  CleanupPanelController.mm  GroupingPanelController.h  GroupingPanelController.mm  IllToolStrings.h  IllToolTheme.h  IllToolTheme.mm  LayerPanelController.h  LayerPanelController.mm  MergePanelController.h  MergePanelController.mm  PenPanelController.h  PenPanelController.mm  PerspectivePanelController.h  PerspectivePanelController.mm  SelectionPanelController.h  SelectionPanelController.mm  ShadingPanelController.h  ShadingPanelController.mm  SurfacePanelController.h  SurfacePanelController.mm  TracePanelController.h  TracePanelController.mm  TransformPanelController.h  TransformPanelController.mm
plugin/blender/: illtool_render_setup.py
plugin/models/: THIRD_PARTY_NOTICES.md
plugin/resources/: Info.plist  pipl.rsrc  plugin.json
plugin/scripts/: build.sh  fetch-sdk-headers.sh  gen-pipl.py  gen-pipl.sh  install.sh
plugin/src/: ai_sdk_compat.h  ai_unicode_string_stub.cpp  annotator.cpp  annotator.h  draw_commands.cpp  draw_commands.h  http_bridge.cpp  http_bridge.h  json_parse.cpp  json_parse.h  llm_client.h  llm_client.mm  main.cpp  main_minimal.cpp  plugin_globals.h  sdk_includes.h  tool.cpp  tool.h
plugin/tools/: create-ui-skin.jsx  deploy.sh  run_trace_backend.py  update-pbxproj.sh
plugin/tools/pipl_gen/: __init__.py  pipl_gen.py  template_plugin.json
plugins/adobe-mcp-ae/: index.html
plugins/adobe-mcp-ai/: index.html
plugins/adobe-mcp-ps/: index.html  relay-client.js
scripts/: install-cep-panels.sh
src/adobe_mcp/: __init__.py  __main__.py  config.py  context.py  engine.py  enums.py  server.py  state.py  tokens.py
tests/: conftest.py  smoke_test.py  test_action_lines.py  test_active_learning.py  test_ae_smoke.py  test_ai_smoke.py  test_analyze_reference.py  test_animated_drawings_bridge.py  test_animatic_preview.py  test_animation_flipbook.py  test_anticipation_markers.py  test_aspect_adapter.py  test_asset_3d_library.py  test_asset_registry.py  test_asset_versioning.py  test_audio_sync.py  test_audio_sync_enhanced.py  test_background_layer.py  test_batch_export_all.py  test_batch_pose.py  test_batch_rig.py  test_beat_sheet.py  test_boundary_signature.py  test_camera_3d.py  test_camera_expressions.py  test_camera_notation.py  test_chain_detector.py  test_character_3d.py  test_character_apose.py  test_character_expression.py  test_character_sheet_gen.py  test_character_turnaround.py  test_character_wizard.py  test_cluster_learning.py  test_color_region_cluster.py  test_color_sampler.py  test_color_script.py  test_compare.py  test_connection_detector.py  test_constraint_solver.py  (+142 more)
thoughts/: Vision Intelligence — Cross-Platform ML Vision (Apple Vision.txt
thoughts/ledgers/: CONTINUITY_CLAUDE-cpp-plugin-loading.md
wiki/: index.md
wiki/.obsidian/: workspace.json
wiki/concepts/: adversarial-review-findings.md  aitimer-dispatch-pattern.md  architecture.md  blend-harmonization.md  blend-tool-implementation.md  blender-freestyle-pipeline.md  cep-to-cpp-port-audit.md  character-rigging.md  cleanup-interaction-model.md  constructive-drawing.md  correction-learning.md  design-dna.md  edge-clustering.md  expanded-normal-renderings.md  extendscript-guide.md  form-gradient-tool.md  future-tools.md  illtool-prd.md  illustrator-cpp-plugin-sdk.md  llm-spatial-reasoning.md  ml-backends.md  normal-map-as-reference.md  on-device-learning.md  perspective-grid-foundation.md  plugin-adversarial-review-round3.md  plugin-architecture-hardening.md  plugin-pipeline-gaps-closed.md  predictive-path-completion.md  project-evolution.md  session-2026-04-09.md  shadow-vs-form.md  smart-merge.md  spatial-3d-pipeline.md  storyboarding.md  test-infrastructure.md  tool-inventory.md  vision-engine.md  void-engine.md  websocket-relay.md
wiki/references/: adding-tools-guide.md  (+6 more)
(+389 files in other folders)
